# casablanca

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
BingRequest/: Makefile  cmake_install.cmake
BlackJack/: cmake_install.cmake
BlackJack/BlackJack_Client/: Makefile  cmake_install.cmake
BlackJack/BlackJack_Server/: Makefile
ClientServer/: restclient.cpp  restserver.cpp
GoogleRequest/: .googlerequest.cpp.swp  googlerequest.cpp
MyClientServer/: Makefile
MyClientServer/MyServer/: cmake_install.cmake
Oauth1Client/: Makefile  cmake_install.cmake
Oauth2Client/: Makefile  cmake_install.cmake
SearchFile/: Makefile  cmake_install.cmake
work/GoogleRequest/: CMakeLists.txt  googlerequest.cpp
